[package]
name = "fsm"
description = "A simple Finite State Machine library, provide State and Event types, then create a machine with an initial state, give it some transition behaviours and you have your state machine!"
version = "0.1.0"
authors = ["Oliver Maskery <omaskery@googlemail.com>"]

readme = "README.md"
keywords = ["fsm", "state", "state machine"]

homepage = "https://github.com/omaskery/fsm-rs"
repository = "https://github.com/omaskery/fsm-rs"
license-file = "LICENSE.txt"

